--- a/study/데브코스/7. 2차프로젝트/4. 도서 API.md
+++ b/study/데브코스/7. 2차프로젝트/4. 도서 API.md
@@ -72,3 +72,131 @@ const selectBooks = (req, res) => {
   } else allBooks(req, res);
 };
 ```
+
+## 카테고리 join
+
+### books-category 연관관계 설정
+
+1. FK 설정
+
+   ```sql
+   ALTER TABLE `Bookshop`.`books`
+   ADD INDEX `category_id_idx` (`category_id` ASC) VISIBLE;
+   ;
+   ALTER TABLE `Bookshop`.`books`
+   ADD CONSTRAINT `category_id`
+   FOREIGN KEY (`category_id`)
+   REFERENCES `Bookshop`.`category` (`id`)
+   ON DELETE NO ACTION
+   ON UPDATE NO ACTION;
+   ```
+
+1. left join
+
+   ```sql
+   SELECT * FROM Bookshop.books LEFT
+   JOIN category ON books.category_id = category.id where books.id = 1;
+   ```
+
+## 신간 도서 조회
+
+### mySQL 시간 범위 구하기 (DATE_ADD, SUB)
+
+- 시간 더하기
+
+  DATE_ADD(기준 날짜, INTERVAL)
+
+  ```sql
+  SELECT DATE_ADD("2024-01-01", INTERVAL 1 DAY);
+  <!-- 2024-01-02 이 나옴 -->
+  ```
+
+  지금 날짜 기준으로 한달 더하면
+
+  ```sql
+  SELECT DATE_ADD(NOW(), INTERVAL 1 MONTH);
+  ```
+
+- 시간 빼기
+
+  DATE_SUB(기준 날짜, INTERVAL)
+
+  DATE_ADD 와 방법이 같음
+
+출시기준 최근 한달 범위를 지정하는 sql 은
+
+```sql
+SELECT * FROM books WHERE pub_date BETWEEN DATE_SUB(NOW(), INTERVAL 1 MONTH) AND NOW();
+```
+
+이걸 API sql 에 적용하면
+
+```js
+let sql = "SELECT * FROM books";
+let values = [];
+if (category_id && news) {
+  sql +=
+    " WHERE category_id = ? AND pub_date BETWEEN DATE_SUB(NOW(), INTERVAL 1 MONTH) AND NOW()";
+  values.push(category_id);
+} else if (category_id) {
+  sql += " WHERE category_id = ?";
+  values.push(category_id);
+} else if (news) {
+  sql += " WHERE pub_date BETWEEN DATE_SUB(NOW(), INTERVAL 1 MONTH) AND NOW()";
+}
+```
+
+## 페이징 구현
+
+- Database paging 란
+
+  > DB 에서 몇개씩 뽑을 것인가
+
+  ```sql
+  SELECT * FROM DB LIMT 출력행갯수 OFFSET 시작위치;
+  ```
+
+  이걸 줄여서 쓰면
+
+  ```sql
+  SELECT * FROM DB LIMT 시작위치, 출력행갯수;
+  ```
+
+  이렇게 됨
+
+```js
+/* 변수 설명
+limit : page 당 도서수
+currentPage : 현재 페이지
+offset = limit * (currentPage - 1)
+*/
+const selectBooks = (req, res) => {
+  const { category_id, news, limit, currentPage } = req.query;
+  const offset = limit * (currentPage - 1);
+
+  let sql = "SELECT * FROM books";
+  let values = [];
+  if (category_id && news) {
+    sql +=
+      " WHERE category_id = ? AND pub_date BETWEEN DATE_SUB(NOW(), INTERVAL 1 MONTH) AND NOW()";
+    values.push(category_id);
+  } else if (category_id) {
+    sql += " WHERE category_id = ?";
+    values.push(category_id);
+  } else if (news) {
+    sql +=
+      " WHERE pub_date BETWEEN DATE_SUB(NOW(), INTERVAL 1 MONTH) AND NOW()";
+    values = [];
+  }
+
+  sql += " LIMIT ? OFFSET ?";
+  console.log(sql);
+  values.push(parseInt(limit), offset);
+
+  conn.query(sql, values, (err, result) => {
+    if (err) return res.status(StatusCodes.BAD_REQUEST).json(err);
+    if (result.length) return res.status(StatusCodes.OK).json(result);
+    else return res.status(StatusCodes.BAD_REQUEST).end();
+  });
+};
+```
