고도화 목표

--- a/study/데브코스/7. 2차프로젝트/11. auth.md
+++ b/study/데브코스/7. 2차프로젝트/11. auth.md
@@ -66,7 +66,7 @@ const getCartItems = async (req, res) => {
 };
 ```
 
-## 개별도서 조회 수성
+## 개별도서 조회 수정
 
 로그인 상태일땐 좋아요 추가, 아닐때 좋아요 제외
 
@@ -104,4 +104,46 @@ const bookDetail = async (req, res) => {
     return res.status(StatusCodes.BAD_REQUEST).json(err);
   }
 };
+```
+
+## 전체 도서 조회 pagination 추가
+
+방법은 2개 있음
+
+```sql
+SELECT * FROM Bookshop.books LIMIT 4 OFFSET 0;
+SELECT count(*) FROM Bookshop.books;
+```
+
+이렇게 따로따로 실행하는 방법과
+
+```sql
+SELECT SQL_CALC_FOUND_ROWS * FROM Bookshop.books LIMIT 4 OFFSET 0;
+SELECT found_rows();
+```
+
+`SQL_CALC_FOUND_ROWS` 는 SELECT 쿼리에 사용되는 MySQL 힌트로 SELECT 쿼리에 의해 반환되는 전체 row의 개수를 임시로 저장함
+
+이를 이용하는 것
+
+```js
+// ... 생략
+sql += " LIMIT ? OFFSET ?";
+values.push(parseInt(limit), offset);
+
+try {
+  const conn = await database.getDBConnection();
+  const [result, fields] = await conn.query(sql, values);
+
+  sql = `SELECT found_rows()`;
+  const [cnt] = await conn.execute(sql);
+  if (result.length && cnt)
+    return res.status(StatusCodes.OK).json({
+      books: result,
+      pagenation: { currentPage: currentPage, totalBooks: cnt },
+    });
+  else return res.status(StatusCodes.BAD_REQUEST).end();
+} catch (err) {
+  return res.status(StatusCodes.BAD_REQUEST).json(err);
+}
 ```
