타입스크립트 기본

--- a/study/데브코스/9. TypeScript/2. 타입스크립트.md
+++ b/study/데브코스/9. TypeScript/2. 타입스크립트.md
@@ -130,13 +130,29 @@ const arr: [number, string, boolean] = [1, "h", true];
 ## 4. 클래스
 
 ```ts
-class Player1 {
+class Player {
   constructor(
-    private firstName: String,
-    private lastName: String,
-    public nickName: String
+    private _firstName: string,
+    private _lastName: string,
+    private _nickName: string
   ) {}
+
+  // getter setter
+
+  // nickName get
+  get nickName() {
+    return this._nickName;
+  }
+
+  // nickName set
+  set nickName(val: string) {
+    this._nickName = val;
+  }
 }
+
+const player1 = new Player("hoho", "name", "hihi");
+player1.nickName = "updateNicName";
+console.log(player1.nickName);
 ```
 
 ts 는 class 생성자를 만들때 this 안써도 됨
