데이터 동적 바인딩 하기

--- a/study/데브코스/9. TypeScript/5. 리액트 변수 바인딩.md
+++ b/study/데브코스/9. TypeScript/5. 리액트 변수 바인딩.md
@@ -58,7 +58,6 @@ const addPostHandler = (): void => {
 
 ```ts
 const deletePostHandler = (id: number): void => {
-  const deletedPosts = posts.filter((post) => post.id !== id);
-  setPosts(deletedPosts);
+  setPosts((prevPosts) => prevPosts.filter((post) => post.id !== id));
 };
 ```
