--- a/study/데브코스/11. 오픈소스 활용/4. 오픈소스.md
+++ b/study/데브코스/11. 오픈소스 활용/4. 오픈소스.md
@@ -1,4 +1,6 @@
-## 오픈소스 라이선스 제안
+## 오픈소스 컨트리뷰트 or 저작자 해보기
+
+### 오픈소스 라이선스 제안
 
 기여 방법에는 제안도 있음
 
@@ -13,3 +15,71 @@
 3. 기업이 사용하길 원하면, 웹 관련 Apache
 
 4. 오픈소스 커뮤니티/ 프로젝트 구성원/ 컨트리뷰터 등등 히스토리 GNU (L/A/) GPL v3
+
+### 오픈소스 소스 모음 사이트
+
+[codetriage.com](https://www.codetriage.com/)
+
+### 어필
+
+1. 협업 능력
+
+2. 프로젝트 문해력
+
+3. 코드 분석
+
+4. 개발문화, 성장 경험
+
+### 저작자가 되는 법
+
+- 기존에 있는 프로젝트
+
+  fork 해서 별도의 프로젝트 운영
+
+- 직접 ㄱㄱ
+
+  프로젝특 명은 중복이 아닌 기능이 명확한, 직관적인
+
+### 저작자 체크리스트
+
+- ReadMe
+
+  프로젝트 만든 이유, 목적, 사용 용도
+
+  코드 사용 방법/ 설치 사용
+
+- Contributing
+
+  환영메시지/ 가이드
+
+- License
+
+## 오픈소스 사용 체크리스트
+
+- 개발전
+
+  1. 오픈소스 기능 및 보안성 테스트
+
+     기능, 보안, 이슈 현황 파악
+
+     취약점 확인, 기관 연락 검토 요청 => 신뢰성 검증
+
+  2. 라이선스 규정 검토
+
+- 개발중
+
+  1. 최약점 최소화 : 보안 정책팁 협업 => 인증, 주요 기능 보안 강화
+
+  2. 대체 수단 확보 : 예외, 법적이슈 발생 => 대비책 마련
+
+  3. 자체 대응 및 추가 개발 역량 확보
+
+- 개발후
+
+  1. 모니터링 : 오픈소스 현황, 취약점 업데이트
+
+  2. 오픈소스 보안패치 : 확인, 취약점 최소화, 적용
+
+  3. 오픈소스 종속성 : 문제발생, 최대한 빠른 해결
+
+  4. 기능 및 보안성 테스트 : 테스트 부서, 보안 팀 .. 협업
