도서페이지

--- a/study/데브코스/12. React/4. 도서페이지.md
+++ b/study/데브코스/12. React/4. 도서페이지.md
@@ -64,13 +64,6 @@ export const useBooks = () => {
 ```
 
 ```tsx
-import styled from "styled-components";
-import { Pagination as IPagination } from "../../models/paginations.model";
-import { LIMIT } from "../../constants/pagination";
-import Button from "../commom/Button";
-import { useSearchParams } from "react-router-dom";
-import { QUERYSTRING } from "../../constants/querystring";
-
 interface Props {
   pagination: IPagination;
 }
@@ -109,23 +102,6 @@ const Pagenation = ({ pagination }: Props) => {
     </PagenationStyle>
   );
 };
-
-const PagenationStyle = styled.div`
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  padding: 24px 0;
-
-  ol {
-    list-style: none;
-    display: flex;
-    gap: 8px;
-    padding: 0;
-    margin: 0;
-  }
-`;
-
-export default Pagenation;
 ```
 
 ### 3. view 는 그리드 형태, 목록 형태로 변경 가능
@@ -146,13 +122,7 @@ const BooksList = ({ books }: Props) => {
       setView(params.get(QUERYSTRING.VIEW) as ViewMode);
     }
   }, [location.search]);
-  return (
-    <BooksListStyle view={view}>
-      {books?.map((item) => (
-        <BookItem key={item.id} book={item} view={view} />
-      ))}
-    </BooksListStyle>
-  );
+  return <BooksListStyle view={view}>// 생략</BooksListStyle>;
 };
 
 interface BooksListStyleProps {
