쿠버네티스

--- a/study/데브코스/13.파이프라인 구축/2. 쿠버네티스.md
+++ b/study/데브코스/13.파이프라인 구축/2. 쿠버네티스.md
@@ -1,6 +1,6 @@
 # 쿠버네티스
 
-## 등장 배경
+## 1. 등장 배경
 
 컨테이너 엔진인 도커는 하나의 서비스를 컨테이너로 가상화시켜 배포하는 역활만 할뿐
 
@@ -10,6 +10,124 @@
 
 서버가 다운되면 해당 서버 안 컨테이너 서비스가 모두 죽어버리는 단점도 있음
 
-또한 개발자들 입장에서도 컨테이너 수가 너무 많아지면 이미지 통합관리가 어려워지고
+![](https://velog.velcdn.com/images/lcw574/post/a97b0969-2947-46b8-b8f8-e78ab1a8bdae/image.png)
 
-배포 프로세스에 어려움을 겪게됨
+그렇기에 컨테이너를 관리, 장애를 막아주고, 리소스 관리/실행 해주는 관리 도구에 대한 필요성이 생겼고
+
+그중 가장 마니 사용하는것이 쿠버네티스
+
+## 2. 쿠버네티스 구조
+
+### 2-1. Cluster
+
+![](https://velog.velcdn.com/images/lcw574/post/61f17a0c-b128-402b-96b2-82284802a9ad/image.png)
+
+> 컨테이너화된 애플리케이션을 자동화, 분산, 확장 가능한 방식으로 실행하는 노드 그룹
+
+- 관리를 해주는 마스터
+
+- 마스터의 지시를 받고 수행하는 워커
+
+### 2-2. Pod
+
+가장 작은 배포 단위
+
+마스터의 지시를 전달 받은 워커가 지시에 맞게
+
+**한개 이상의 컨테이너 그룹** 으로 Pod가 구성함
+
+- pod 의 장점
+
+  - 통신 용이성 향상
+
+    애플리케이션 안의 컨테이너간에는 별도의 호출없이 localhost를 통해서 통신 가능
+
+  - 볼륨 공유
+
+    ![](https://velog.velcdn.com/images/lcw574/post/dfcd92a7-659d-4061-8ad0-a916fa681bee/image.webp)
+
+    볼륨이란 파일을 영구적으로 저장하기 위한 곳으로
+
+    한곳에 저장하여 파일을 공유 할 수 있음
+
+    Pod 내부 컨테이너의 로그들을 모두 수집할 수 있음
+
+### 2-3. master 구성요소
+
+![](https://velog.velcdn.com/images/lcw574/post/a8b71ab5-2fad-4771-9935-2a4db9db6345/image.png)
+
+- API Server
+
+  모든 조회나 요청을 담당
+
+  kubectl으로부터 요청을 받음
+
+  REST API를 통해 etcd 정보 조회 및 업데이트하고 명령을 실행
+
+- Scheduler
+
+  새로 생성된 Pod 를 감지하고 실행할 노드를 선택
+
+- Controllers
+
+  지속적으로 상태를 체크하고 원하는 상태를 유지
+
+- ETCD
+
+  설정관리, 서비스 디스커버리, 스케줄링 등을 위한 데이터를 저장하는 저장소
+
+### 2-4. Worker 구성요소
+
+![](https://velog.velcdn.com/images/lcw574/post/c04de826-c4e8-4550-afa3-d828eddcee4b/image.png)
+
+서비스에 필요한 전반적인 일들을 마스터와 통신하며 수행
+
+- kubelet
+
+  파드를 생성하고 컨테이너가 이상이 없는지 주기적으로 마스터에게 상태 전달
+
+  추가적으로 api 서버의 요청을 받아서 컨테이너 로그를 전달하거나 특정 명령을 대신 수행
+
+- proxy
+
+  여러개의 파드를 라운드-로빈형태로 묶어서 서비스를 제공할 수 있음
+
+## 3. 쿠버네티스 주요 기능
+
+### 3-1. self-healing
+
+시스템이 영향 받을때마다 Container 상태 감지 및
+
+비정상적일땐 자체적으로 Pod 재생성하여 교체
+
+### 3-2. Rolling update & Rollback
+
+> 이미지 태그 기능을 통한 버전관리
+
+예를 들어 프로그램 버전을 바꾸고 싶을 경우
+
+바꿀 버전 이미지를 만들고 마스터에 버전을 변경해달라고 명령을 내리면
+
+바꿀 버전의 Pod 를 띄우게 되고 라우팅만 바꿔주어서
+
+서비스 단절없이 서비스 게종이 가능해짐
+
+### 3-3. load Balancing
+
+> Service Object 를 사용하여 Pod에 트래픽 분산
+
+마스터가 알아서 트래픽을 분산해주는 기능
+
+### 3-4. Auto Scaling
+
+트래픽 양이나 리소스 사용에 기반해서
+
+Pod를 추가적으로 더 생성해주는 기능
+
+그밖에 Pod 리소스 관리(vpa), 서버 웹 조정(ca) 등의 스케일링 기능이 있음
+
+## 출처
+
+- [[kt cloud Basic] 쿠버네티스(Kubernetes) 알아보기](https://www.youtube.com/watch?v=OhwZuDpGPWU)
+
+- [K8S 개념 및 Cluster 구축 실습](https://blog.bespinglobal.com/post/k8s-%EA%B0%9C%EB%85%90-%EB%B0%8F-cluster-%EA%B5%AC%EC%B6%95-%EC%8B%A4%EC%8A%B5/)
