단위테스트

--- a/study/데브코스/14. 웹기반 문서 편집기 프로젝트 (4차)/2. BE 설계.md
+++ b/study/데브코스/14. 웹기반 문서 편집기 프로젝트 (4차)/2. BE 설계.md
@@ -49,3 +49,9 @@ https://spacebike.tistory.com/57
 명령어
 
 - kubectl apply -f <매니페스트 파일>
+
+https://school.programmers.co.kr/app/courses/19438/curriculum/lessons/295401
+
+## 도커 들어가기
+
+docker exec -it <컨테이너 이름 또는 ID> bash
