--- a/study/면접 지식/computerScience/보수의 개념.md
+++ b/study/면접 지식/computerScience/보수의 개념.md
@@ -18,6 +18,10 @@
 
 해당 수의 `보수` 를 만들어 그 값을 더해
 
+정확히는
+
+> 보수(Complement)를 사용하여 음수를 나타내고 덧셈을 수행
+
 ---
 
 이해를 위해 9 - 6 의 계산
@@ -28,7 +32,7 @@
 
 9 - 6 과 동일하다
 
-`보수는 보충해주는 수`
+> 보수는 보충해주는 수
 
 ## 보수법
 
