프로젝트 세팅

--- a/study/데브코스/16. 마지막 프로젝트/메모장.md
+++ b/study/데브코스/16. 마지막 프로젝트/메모장.md
@@ -5,3 +5,11 @@
 - https://tiptap.dev/
 
 - 컬러 : https://encycolorpedia.kr/, https://www.color-hex.com/
+
+- 깃헙 브랜치 전략
+
+  - 깃 플로우 : https://techblog.woowahan.com/2553/
+
+- 깃헙 pr 템플릿 : https://green-bin.tistory.com/16
+
+- [vite 설치 및 prettier 사용하기](https://shawnkim.tistory.com/132)
