--- a/study/데브코스/16. 마지막 프로젝트/메모장.md
+++ b/study/데브코스/16. 마지막 프로젝트/메모장.md
@@ -13,3 +13,20 @@
 - 깃헙 pr 템플릿 : https://green-bin.tistory.com/16
 
 - [vite 설치 및 prettier 사용하기](https://shawnkim.tistory.com/132)
+
+  - .eslintrc.cjs 파일 수정
+
+    ```
+      module.exports = {
+      root: true,
+      env: { browser: true, es2020: true },
+      extends: ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:react-hooks/recommended"],
+      ignorePatterns: ["dist", ".eslintrc.cjs"],
+      parser: "@typescript-eslint/parser",
+      plugins: ["react-refresh", "prettier"],
+      rules: {
+        "react-refresh/only-export-components": ["warn", { allowConstantExport: true }],
+        "prettier/prettier": "error", // 해당 코드 추가 =>  ESLint의 규칙은 Prettier의 포맷팅 규칙 따르기
+      },
+    };
+    ```
