--- a/study/면접 지식/computerScience/디자인패턴.md
+++ b/study/면접 지식/computerScience/디자인패턴.md
@@ -1,35 +1,148 @@
 # 디자인 패턴
 
-    과거 소프트웨어 개발 과정에서 발견한 설계 노하우를 패턴으로 정리
+> 프로그램을 설계할때 발생했던 문제점들을 객체간의 상호 관계등을 이용하여 해결 할 수 있도록 하나의 규약 형태로 만들어 놓는것
 
-- 장점
+## 종류
 
-  - 코드 비슷 > 의사소통 효율적
+- 생성패턴
 
-  - 검증
+  객체의 생성 메커니즘을 추상화하고 객체의 인스턴스화 과정을 분리하는 패턴입니다.
 
-![디자인 패턴](/study/pic/gofTypesOfDesignPattern.png)
+  주요 목표는 코드를 더 유연하게 만들고 객체 간의 종속성을 줄이는 것입니다.
 
-## 1. 생성 패턴
+  대표적인 예로는 Singleton(단일체), Factory(팩토리), Builder(빌더) 등이 있습니다.
 
-    객체를 어떻게 생산할것인가
+- 구조패턴
 
-1. 싱글톤 패턴
+  클래스나 객체를 조합하여 더 큰 구조를 만드는 패턴입니다.
 
-   인스턴스를 오직 1개만 생성하는 패턴
+  주로 상속, 인터페이스, 컴포지션 등을 통해 구현됩니다.
+  코드의 재사용성을 높이고 유연성을 제공하는 데 중점을 둡니다.
 
-2. 팩토리 메소드 패턴
+  예를 들어, Adapter(어댑터), Decorator(장식자), Proxy(프록시) 등이 있습니다.
 
-## 2. 구조 패턴
+- 행위패턴
 
-    구조를 어떻게 짤것인가
+  객체 간의 상호 작용과 책임 분배에 관련된 패턴입니다.
 
-## 3. 행동 패턴
+  객체 간의 상호 작용이나 알고리즘을 관리하는 데 사용됩니다.
 
-    메소드에 관련된 패턴
+  코드의 유연성과 확장성을 향상시키는 데 도움을 줍니다.
 
-## 레퍼런스
+  주요 예로는 Observer(옵서버), Strategy(전략), Command(커맨드) 등이 있습니다.
 
-[개발자 기술 면접 - 8. 디자인 패턴](https://www.youtube.com/watch?v=JDBatJ8Dlgw)
+### 싱글톤 패턴(Singleton pattern)
 
-[[Design Pattern] GoF(Gang of Four) 디자인 패턴](https://4z7l.github.io/2020/12/25/design_pattern_GoF.html)
+하나의 클래스에 오직 하나의 인스턴스만 가지는 패턴
+
+보통 데이터베이스 연결 모듈에 많이 사용됨
+
+- 하나의 인스턴스를 공유하기에 인스턴스 생성 비용이 줄어듬
+
+- 그만큼 의존성이 높아짐
+
+```js
+class Singleton {
+  constructor() {
+    if (Singleton.instance) {
+      Singleton.instance = this;
+    }
+    return Singleton.instance;
+  }
+
+  getInstance() {
+    return this;
+  }
+}
+
+// new Singleton();
+```
+
+```java
+class Singleton{
+    private static class singleInstanceHolder{
+        private static final Singleton INSTANCE = new Singleton();
+    }
+
+    public static Singleton getInstance(){
+        return singleInstanceHolder.INSTANCE;
+    }
+}
+
+// Singleton.getInstance();
+```
+
+#### 싱글톤의 단점
+
+- TDD (Test Driven Development) 를 할때 힘듬
+
+  TDD 할때 주로 단위 테스트 위주로 하는데 단위 테스트는 서로 독립적이어야함
+
+  하지만 싱글톤은 독립적으로 인스턴스를 하기 어려움
+
+그렇기에 결합도를 낮추기 위해 의존성 주입을 해주자
+
+> 의존성 주입 원칙으로 상위 모듈은 하위 모듈에서 어떤 것도 가져오면 안됨 그리고 추상화에 의존해야하며 세부사항에 의존 X
+
+### 팩토리 패턴(factory pattern)
+
+객체를 사용하는 코드에서 객체생성 부분을 떼내어 추상화한 패턴
+
+상속 클래스에서 중요한 뼈대를 결정하고, 하위 클래스에서 객체생성에 관한 구체적인 내용을 결정
+
+```ts
+abstract class CoffeeFactory {
+  static createCoffee(type: string): Coffee {
+    const Factory = factoryList[type];
+    return Factory.createCoffee();
+  }
+}
+
+class Latte implements Coffee {
+  name: string;
+
+  constructor() {
+    this.name = "Latte";
+  }
+}
+
+class Espresso implements Coffee {
+  name: string;
+
+  constructor() {
+    this.name = "Espresso";
+  }
+}
+
+class LatteFactory extends CoffeeFactory {
+  static createCoffee(): Coffee {
+    return new Latte();
+  }
+}
+
+class EspressoFactory extends CoffeeFactory {
+  static createCoffee(): Coffee {
+    return new Espresso();
+  }
+}
+
+interface Coffee {
+  name: string;
+}
+
+const factoryList: { [key: string]: typeof CoffeeFactory } = {
+  LatteFactory,
+  EspressoFactory,
+};
+
+const main = () => {
+  const coffee = CoffeeFactory.createCoffee("LatteFactory");
+  console.log(coffee.name, "뭐임");
+};
+
+main();
+```
+
+### 전략 패턴(strategy pattern) 또는 정책 패턴(policy pattern)
+
+객체의 행위를 바꾸고 싶은 경우 직접 수정하지 않고 캡슐화한 알고리즘을 컨텍스트 안에서 바꿔주면서 상호 교체 해주는 패턴
