--- a/study/데브코스/16. 마지막 프로젝트/참고사이트.md
+++ b/study/데브코스/16. 마지막 프로젝트/참고사이트.md
@@ -1,3 +1,5 @@
 ## 참고 사이트
 
 - [상태코드 사이트](https://velog.io/@soyeon207/HTTP-%EC%83%81%ED%83%9C-%EC%BD%94%EB%93%9C-%EC%A0%95%EB%A6%AC#%E2%99%80%EF%B8%8F-%EB%A0%88%ED%8D%BC%EB%9F%B0%EC%8A%A4)
+
+- [저작권 없는 사이트](https://m.blog.naver.com/shlee1175/223103688845)
