--- a/study/java/code/PCCE_basic/변환.md
+++ b/study/java/code/PCCE_basic/변환.md
@@ -1,7 +1,7 @@
 ## 숫자 > 문자 변환
 
 // 숫자 >> 문자 : Integer.toString()
-// 문자 >> 숫자1 : Integer.parsInt()
+// 문자 >> 숫자1 : Integer.parseInt()
 // 문자 >> 숫자2 : Integer.valueOf()
 // valueOf() 메소드는 문자열을 변환하여 Integer Object를 리턴한다는 것입니다.parseInt() 메소드는 primitive type인 int를 리턴합니다.
 // 출처: https://hianna.tistory.com/524 [어제 오늘 내일:티스토리]
@@ -22,90 +22,6 @@ Integer.toString(val1)
 
 ```java
 Math.pow(c,2)
-```
-
-## 문자 비교
-
-문자 비교는 == 가 아니라 `equals`
-
-```java
-"안녕".equals("싫어");
-```
-
-```java
-import java.util.*;
-
-class Solution {
-
-    public List<int[]> solution(int[][] data, String ext, int val_ext, String sort_by) {
-        // 1. 필터링 기준 인덱스를 결정합니다.
-        int filterIndex = getIndex(ext);
-        int sortIndex = getIndex(sort_by);
-
-        // 2. 필터링 작업 수행
-        List<int[]> filteredData = new ArrayList<>();
-        for (int[] row : data) {
-            if (row[filterIndex] < val_ext) {
-                filteredData.add(row);
-            }
-        }
-
-        // 3. 정렬 작업 수행
-        filteredData.sort(Comparator.comparingInt(a -> a[sortIndex]));
-
-        return filteredData;
-    }
-
-    // 4. 필터링 또는 정렬 기준에 맞는 인덱스 값을 리턴
-    private int getIndex(String type) {
-        switch (type) {
-            case "code":
-                return 0;
-            case "date":
-                return 1;
-            case "maximum":
-                return 2;
-            case "remain":
-                return 3;
-            default:
-                throw new IllegalArgumentException("Invalid type: " + type);
-        }
-    }
-
-    public static void main(String[] args) {
-        Solution sol = new Solution();
-
-        // 예시 데이터
-        int[][] data = {
-            {1, 20300104, 100, 80},
-            {2, 20300804, 847, 37},
-            {3, 20300401, 10, 8}
-        };
-
-        String ext = "date";
-        int val_ext = 20300501;
-        String sort_by = "remain";
-
-        List<int[]> result = sol.solution(data, ext, val_ext, sort_by);
-
-        // 결과 출력
-        for (int[] row : result) {
-            System.out.println(Arrays.toString(row));
-        }
-    }
-}
-```
-
-## 대소문자 변환
-
-```java
-String a = "yes";
-a.charAt(0) // y
-```
-
-```java
-Character.toLowerCase(a.charAt(i))
-Character.toUpperCase(a.charAt(i))
 ```
 
 ### 특수문자
