--- a/study/java/code/PCCE_basic/자료구조/문자열.md
+++ b/study/java/code/PCCE_basic/자료구조/문자열.md
@@ -1,6 +1,8 @@
-# char
+# 문자열
 
-## 숫자 char 를 숫자로 변환
+## char
+
+### 숫자 char 를 숫자로 변환
 
 ```java
 char c = '1';
@@ -20,7 +22,7 @@ System.out.println(n); // 결과: 1
 
 이렇게도 가능은 한데 권장 X
 
-### 문제 예시
+#### 문제 예시
 
 https://school.programmers.co.kr/learn/courses/30/lessons/181914
 
@@ -37,4 +39,38 @@ class Solution {
         return answer%9;
     }
 }
+```
+
+## String
+
+### 문자열 배열 > 문자열로
+
+```java
+String.join("", arr);
+```
+
+### 숫자 > 문자
+
+```java
+Integer.toString()
+```
+
+### 문자 비교
+
+문자 비교는 == 가 아니라 `equals`
+
+```java
+"안녕".equals("싫어");
+```
+
+### 대소문자 변환
+
+```java
+String a = "yes";
+a.charAt(0) // y
+```
+
+```java
+Character.toLowerCase(a.charAt(i))
+Character.toUpperCase(a.charAt(i))
 ```
