--- a/study/오픽/0. 설문.md
+++ b/study/오픽/0. 설문.md
@@ -23,19 +23,19 @@ https://www.youtube.com/watch?v=GqznyqWi8Mg
 - 선택 주제 (12개를 반드시 골라야함)
 
   1.  영화
-  1.  공연
-  1.  공원가기
-  1.  해변가기
-  1.  카페
+  2.  공연
+  3.  공원가기
+  4.  해변가기
+  5.  카페
 
-  1.  음악 감상
-  1.  요리하기
+  6.  음악 감상
+  7.  요리하기
 
-  1.  조깅
-  1.  걷기
-  1.  운동을 전혀 하지 않음
-  1.  집에서 보내는 휴가
-  1.  국내여행
+  8.  조깅
+  9.  걷기
+  10. 운동을 전혀 하지 않음
+  11. 집에서 보내는 휴가
+  12. 국내여행
 
 ### 2. 1이렇게 설문 자주 나오는 문제
 
@@ -182,3 +182,5 @@ https://www.youtube.com/watch?v=GqznyqWi8Mg
   우리는 한동안 온라인 게임에만 집중해서 시간이 가는줄 몰랐다.
 
 - that's pretty much it >> 그게 다야, 그뿐이야
+
+- that's it for this question >> 그 질문에 대한건 여기까지
