--- a/study/오픽/3. 영화보기.md
+++ b/study/오픽/3. 영화보기.md
@@ -18,22 +18,36 @@
 
 ## 좋아하는 영화 장르와 이유
 
-My favorite movie is action movie.
+My favorite movie is comedies movie.
 
-It's interesting because of the very colorful CG.
+I like them because they are fun and entertaining.
 
-The most memorable movie I saw was Transformers.
+The most memorable movie I saw was 극한직업.
 
 ## 영화 관람전, 후에 주로 하는 일
 
 I usually buy popcorn before watching a movie.
 
-And I eat all the popcorn before the movie starts haha.
+And I eat all the popcorn before the movie starts. haha.
 
-I think popcorn is a really delicious food.
+I think popcorn is a really delicious food. I love it.
 
 After the movie, I run to the bathroom faster than anyone else.
 
-## 가장 좋아하는 영화 배우
+when I get back home. I talk about movie with my friends.
 
-## 기억에 남는 영화
+## 가장 좋아하는 영화 배우 와 기억에 남는 영와
+
+I like many actors. but I love 류승룡 the best.
+
+because he can play many different charater types.
+
+he alos has very unique face.
+
+the mose memorable movie I've seen is 극한직업.
+
+류승룡 had the leading role.
+
+he was very funny in the movie
+
+##
