--- a/study/오픽/2. 집 묘사.md
+++ b/study/오픽/2. 집 묘사.md
@@ -13,28 +13,73 @@
 
 - 집을 구하게 된 방법
 
-## 1. 집의 모습 묘사
+## 집 묘사
 
-- 가족
+> 키워드 :: small, furniture, cozy, comfy, rent, cheap
 
-  Describe what your home looks like?
 
-  Explain the floor plan and the number of rooms
+My house is located in Seoul.
 
-  your homes has.
+It is a studio apartment.
 
-  Please discuss what your home is like for me
+I don’t have a lot of furniture.
+because my house is very small.
 
-지금 제가 살고 있는 집은 아파트로 큰 중앙 복도가 있고 강에서 금이 흐르는 아파트입니다
+so, in my room I've got a bed, a desk and a chair.
 
-## 2. 방에 있는 가구나 가전제품 묘사
+but it’s very cozy and comfy. and rent is cheap.
 
-## 3. 집에서 가족들과 함께하는 일
+rent is very important.
 
-- 가족
+so, I love my house.
 
-  While at home, what is your typical routine?
 
-  During the week and on the weekends, what types of things do you do?
+## 어렸을때 살던 집과 지금 사는 집을 비교 (어릴적 경험 or 첫경험?)
 
-## 4. 최근에 집에 준 변화
+> 키워드 :: spacious, clean, tidy, housework, myself, alone
+
+
+let me compare the place I used to live in with my parents house and the one I live in now.
+
+my parents house is a spacious and nice house.
+
+the place was always like clean and tidy.
+
+But in my house, I have to do all the housework by myself.
+
+Even though the house is small, it's not easy to do housework alone.
+
+
+
+## 집에 문제가 있었던 경험, 어떻게 했는가 (최근 경험)
+
+> 키워드 :: old refrigerator, noise, expensive
+
+
+Recently, the refrigerator had a problem.
+
+Sometimes there was a noise I didn't want to hear.
+
+I asked about this.
+
+It's an old refrigerator, so it makes noise.
+
+They told me to buy a new refrigerator.
+
+But it's too expensive.
+
+So I just decided not to buy it.
+
+<!-- I live with noise. -->
+
+## 가구 묘사, 가장 좋아하는 가구
+
+I said before that my house is very small.
+
+so I don’t have a lot of furniture.
+
+I have a bed and a desk and a chair.
+
+
+
+## 집에서 가족들이랑 보내는 일
