--- a/study/오픽/3. 영화보기.md
+++ b/study/오픽/3. 영화보기.md
@@ -38,16 +38,17 @@ when I get back home. I talk about movie with my friends.
 
 ## 가장 좋아하는 영화 배우 와 기억에 남는 영와
 
-I like many actors. but I love 류승룡 the best.
+> 키워드 ::
 
-because he can play many different charater types.
+I like many actors, but 류승룡 the best.
 
-he alos has very unique face.
+Because he is very good at acting.
 
-the mose memorable movie I've seen is 극한직업.
+the most memorable movie I've seen is 극한직업.
 
 류승룡 had the leading role.
 
-he was very funny in the movie
+he was very fuuny in the movie.
+
 
 ##
