--- a/study/오픽/1. 자기소개.md
+++ b/study/오픽/1. 자기소개.md
@@ -1,9 +1,14 @@
-# 자기소개
+# 자기소대
 
-안녕 내 이름 이철욱이야
+> 키워드 :: Gwangju, peaceful place, hiking, seoul
 
-지금부터 내 소개를 해볼께
+Hi, I'm Cheol Wook Lee.
 
-two months ago. i was move in apratment in seoul.
+I was born in Gwangju, South Korea.
+Gwangju is a beautiful city and a peaceful place to live.
 
-- apply for
+It’s surrounded by amazing mountains and forests.
+I have fond memories from my teenage years, 
+especially spending a lot of time hiking and jogging there.
+
+Recently, I moved to Seoul, and I’m looking for job.
