--- a/study/오픽/0. 설문.md
+++ b/study/오픽/0. 설문.md
@@ -18,24 +18,25 @@ https://www.youtube.com/watch?v=GqznyqWi8Mg
 
 - 일경험 없음
 - 학생 아님 > 수강 후 5년 이상 지남
-- 아파트 /가족가 같이 삼
+- 개인 주택이나 아파트에 홀로 거주
 
 - 선택 주제 (12개를 반드시 골라야함)
 
   1.  영화
-  2.  공연
-  3.  공원가기
-  4.  해변가기
-  5.  카페
+  2.  공원가기
+  3.  해변가기
+  4.  캠핑가기
 
-  6.  음악 감상
-  7.  요리하기
+  5.  음악 감상
 
+  6.  자전거
+  7.  하이킹
   8.  조깅
   9.  걷기
   10. 운동을 전혀 하지 않음
+
   11. 집에서 보내는 휴가
-  12. 국내여행
+  12. 국내여행? 해외여행? 아직 미정
 
 ### 2. 1이렇게 설문 자주 나오는 문제
 
