--- a/study/오픽/3. 영화, 음악.md
+++ b/study/오픽/3. 영화, 음악.md
@@ -22,15 +22,17 @@ My favorite movie is comedies movie.
 
 I like them because they are fun and entertaining.
 
-The most memorable movie I saw was 극한직업.
+The most memorable movie is 극한직업.
 
 ## 영화 관람전, 후에 주로 하는 일
+
+> 키워드 :: popcorn, bathroom, friends
 
 I usually buy popcorn before watching a movie.
 
 And I eat all the popcorn before the movie starts. haha.
 
-I think popcorn is a really delicious food. I love it.
+I think popcorn is a really delicious food. I absolutely love it.
 
 After the movie, I run to the bathroom faster than anyone else.
 
@@ -38,7 +40,7 @@ when I get back home. I talk about movie with my friends.
 
 ## 가장 좋아하는 영화 배우 와 기억에 남는 영와
 
-> 키워드 ::
+> 키워드 :: 류승룡
 
 I like many actors, but 류승룡 the best.
 
@@ -51,4 +53,6 @@ the most memorable movie I've seen is 극한직업.
 he was very fuuny in the movie.
 
 
-##
+## 좋아하는 음악장르와 가수 또는 작곡가
+
+
