--- a/study/오픽/1. 자기소개.md
+++ b/study/오픽/1. 자기소개.md
@@ -8,7 +8,7 @@ I was born in Gwangju, South Korea.
 Gwangju is a beautiful city and a peaceful place to live.
 
 It’s surrounded by amazing mountains and forests.
-I have fond memories from my teenage years, 
-especially spending a lot of time hiking and jogging there.
+I have fond memories from my young, 
+especially(이스페셜리) spending a lot of time hiking and jogging there.
 
 Recently, I moved to Seoul, and I’m looking for job.
