--- a/study/오픽/10. 집에서휴가.md
+++ b/study/오픽/10. 집에서휴가.md
@@ -18,8 +18,28 @@
 
 ## 1. 집에서 휴가를 보내면서 하는 일
 
+I just watch TV show on nextflix lying on my bed.
+
+I put a cell pone holder on the head of my bed.
+
+It is really convenient when watching Netflix.
+
+
 ## 2. 휴가 중에 집에 방문하는 사람과 함께 하는 일
+
+when I spen my vacations at home.
+
+if my friends visit my home.
+
+I play game with my friends.
+
 
 ## 3. 집에서 휴가를 보내는 이유
 
+I spend my vacations at home.
+
+because I can relax without any interruptions.
+
+
 ## 4. 집에서 보낸 휴가 중 기억에 남는 경험
+
