--- a/study/오픽/3. 영화, 음악.md
+++ b/study/오픽/3. 영화, 음악.md
@@ -26,15 +26,17 @@ The most memorable movie is 극한직업.
 
 ## 영화 관람전, 후에 주로 하는 일
 
-> 키워드 :: popcorn, bathroom, friends
+> 키워드 :: popcorn, restroom, friends
 
-I usually buy popcorn before watching a movie.
+I prefer to go to CGV theator.
 
-And I eat all the popcorn before the movie starts. haha.
+because it's near my house.
 
-I think popcorn is a really delicious food. I absolutely love it.
+when before the a movie, I usually buy popcorn and soda.
 
-After the movie, I run to the bathroom faster than anyone else.
+I also make sure to go to the restroom.
+
+After the movie, I usually grab a bite to eat.
 
 when I get back home. I talk about movie with my friends.
 
@@ -55,4 +57,11 @@ he was very fuuny in the movie.
 
 ## 좋아하는 음악장르와 가수 또는 작곡가
 
+I like korean pop music the best.
+
+my favorite song is fantastic baby by bigbang
+
+because It's very exciting.
+
+It makes me feel better.
 
