--- a/study/오픽/4. 공원, 자전거.md
+++ b/study/오픽/4. 공원, 자전거.md
@@ -13,18 +13,18 @@
 ## 1. 공원 묘사
 
 
-I take my bike to the park near my house.
+My favorite park is Han River Park.
 
-when I go to the park, I usually bring a water bottle.
+It is a public park located near Seoul.
 
-the park has a bicycle path and exercise equipment.
+The park is very large.
 
-at the park, I like to go on the rides.
+And there are bike paths and exercise equipment in the park.
 
+So when I go to the park, I usually bring a water bottle and a bicycle.
 
-## 2. 공원하는 주로 하는 일
+I usually ride my bike every weekend.
 
-## 3. 공원에 가는 빈도, 사람, 하는 일
 
 ## 4. 공원에서 있었던 뜻밖의 경험
 
@@ -36,13 +36,13 @@ I remember the time whe I
 
 My bike is all black.
 
-It is road bike.
+It is a road bike. 
 
-This is important because it is light.
+I use It because it is lightweight.
 
 I bought my bike at a store near my house.
 
-It was cheap. so I am happy with purchase.
+It was very cheap. so I am happy with purchase(퍼처스).
 
 
 ## 자전거 타게된 계기
@@ -53,7 +53,7 @@ I bought a bicycle to go to school.
 
 It started because it was cheap.
 
-The experience of riding a bicycle was much better than I thought.
+The experience of riding a bicycle was much better than I thought(떠ㄸ).
 
 So even after graduation, I still enjoy riding my bike in the park.
 
