--- a/study/오픽/5. 해변, 캠핑.md
+++ b/study/오픽/5. 해변, 캠핑.md
@@ -6,7 +6,7 @@ I really like Haeundae Beach.
 
 It is a famous beach in south Korea.
 
-I go there often when I need to clear my mind with my friends.
+when I need to clear my mind with my friends, I go there often.
 
 It has beautiful white sand and very delicous seafood.
 
