--- a/study/오픽/2. 집, 동네 묘사.md
+++ b/study/오픽/2. 집, 동네 묘사.md
@@ -22,21 +22,21 @@ My house is located in Seoul.
 
 It is a studio apartment.
 
-I don’t have a lot of furniture.
+I don't have a lot of furniture.
 because my house is very small.
 
 so, in my room I've got a bed, a desk and a chair.
 
-but it’s very cozy and comfy. and rent is cheap.
+but my house is very cozy and comfy. and rent is cheap.
 
-rent is very important.
+rent is very important point.
 
 so, I love my house.
 
 
 ## 어렸을때 살던 집과 지금 사는 집을 비교 (어릴적 경험 or 첫경험?)
 
-> 키워드 :: spacious, clean, tidy, housework, myself, alone
+> 키워드 :: spacious(스페ㅇ셔스), clean, tidy, housework, myself, alone
 
 
 let me compare the place I used to live in with my parents house and the one I live in now.
@@ -47,13 +47,13 @@ the place was always like clean and tidy.
 
 But in my house, I have to do all the housework by myself.
 
-Even though the house is small, it's not easy to do housework alone.
+Even though(또우) the house is small, it's not easy to do housework alone.
 
 
 
 ## 집에 문제가 있었던 경험, 어떻게 했는가 (최근 경험)
 
-> 키워드 :: old refrigerator, noise, expensive
+> 키워드 :: old refrigerator(리프리저레ㅇ터), noise, expensive
 
 
 Recently, the refrigerator had a problem.
@@ -76,10 +76,42 @@ So I just decided not to buy it.
 
 I said before that my house is very small.
 
-so I don’t have a lot of furniture.
+so I don't have a lot of furniture.
 
-I have a bed and a desk and a chair.
+but My favorite furniture is the bed.
+
+I like watching Netflix in bed.
+
+It is very comfy.
 
 
 
 ## 집에서 가족들이랑 보내는 일
+
+
+## 동네 묘사
+
+I live in the southwestern part of Seoul.
+
+my home is a little close to subway station
+
+there many a studio apartment buildings in my neighborhood.
+
+It has a big supermarket and small park.
+
+also there are some school and library.
+
+It is a good place to live.
+
+## 이웃 묘사
+
+
+
+## 동네에서의 기억?
+
+usually, My neighborhood is calm.
+
+When I jog in the neighborhood in the morning
+
+It makes me feel better.
+
