--- a/study/오픽/2. 집, 동네 묘사.md
+++ b/study/오픽/2. 집, 동네 묘사.md
@@ -80,7 +80,7 @@ so I don't have a lot of furniture.
 
 but My favorite furniture is the bed.
 
-I like watching Netflix in bed.
+because I like watching Netflix in bed.
 
 It is very comfy.
 
@@ -88,6 +88,7 @@ It is very comfy.
 
 ## 집에서 가족들이랑 보내는 일
 
+# 동네
 
 ## 동네 묘사
 
