--- a/study/오픽/5. 해변, 캠핑.md
+++ b/study/오픽/5. 해변, 캠핑.md
@@ -12,7 +12,7 @@ It has beautiful white sand and very delicous seafood.
 
 So I eat delicious seafood all day with my friends.
 
-I always have a lot of fun whenever I go there.
+whenever I go there, I always have a lot of fun.
 
 
 ## 해변갈때 가져가는것.
@@ -54,7 +54,7 @@ in the evening, We all have barbecue together.
 
 when I was young.
 
-I went camping on 무등산 Mountain with my family.
+I went camping on 무등 Mountain with my family.
 
 At night, I was surprised by the beautiful night sky.
 
