--- a/study/오픽/8. 집에서휴가.md
+++ b/study/오픽/8. 집에서휴가.md
@@ -38,8 +38,15 @@ I play game with my friends.
 
 I spend my vacations at home.
 
-because I can relax without any interruptions.
+because I can relax without any interruptions(인터럽션즈).
 
 
 ## 4. 집에서 보낸 휴가 중 기억에 남는 경험
 
+Last week, I watched Arcane,
+
+It's the Netflix animation show.
+
+It was about steampunk fantasy story.
+
+I really enjoyed watching it.
