--- a/study/오픽/3. 영화, 음악.md
+++ b/study/오픽/3. 영화, 음악.md
@@ -54,6 +54,8 @@ the most memorable movie I've seen is 극한직업.
 
 he was very fuuny in the movie.
 
+# 음악
+
 
 ## 좋아하는 음악장르와 가수 또는 작곡가
 
@@ -63,5 +65,11 @@ my favorite song is fantastic baby by bigbang
 
 because It's very exciting.
 
-It makes me feel better.
+they are famous for powerful dancing and singing.
+
+I'm totally into bigbang.
+
+
+
+## 음악 듣는 방법
 
