--- a/study/오픽/11. 돌발.md
+++ b/study/오픽/11. 돌발.md
@@ -2,11 +2,11 @@
 
 ## 돌발 장소 묘사
 
-I usually go to modern [  장소  ] located near my house.
+I usually go to nice [  장소  ] located near my house.
 
-It has a sleek, minimalistic interior with clean waiting rooms.
+It has a simple and clean design with tidy waiting areas.
 
-the atmosphere is welcoming and professional, with excellent services.
+the atmosphere(앳머스피어) is welcoming and professional, with excellent services.
 
 the staff are skilled and very kind.
 
@@ -17,13 +17,13 @@ they always take the time to discuss my needs before services.
 
 Recently, I went to a [ 장소 ] near my house.
 
-The atmosphere was vibrant(바이브런트), and I felt really comfortable there.
+The atmosphere was vibrant(바이브런트), and the staff were very friendly.
 
-I spent my time [장소에서 한 활동, 예: reading, walking, enjoying food ], which was very enjoyable.
+I spent my time [장소에서 한 활동, 예: reading, walking, enjoying food ], and everything went well.
 
-It helped me clear my mind and recharge my energy.
+It was a good experience, and I felt happy with how things turned out.
 
-Overall, it was a refreshing experience, and I look forward to going back.
+I would like to visit again if I need to.
 
 
 
