--- a/study/오픽/4. 공원, 자전거.md
+++ b/study/오픽/4. 공원, 자전거.md
@@ -30,6 +30,9 @@ I usually ride my bike every weekend.
 
 I remember the time whe I 
 
+
+It helped me clear my mind and recharge my energy.
+
 # 자전거
 
 ## 자전거 묘사
