--- a/study/오픽/2. 집, 동네 묘사.md
+++ b/study/오픽/2. 집, 동네 묘사.md
@@ -88,6 +88,8 @@ It is very comfy.
 
 ## 집에서 가족들이랑 보내는 일
 
+
+
 # 동네
 
 ## 동네 묘사
@@ -107,12 +109,26 @@ It is a good place to live.
 ## 이웃 묘사
 
 
+The people in my neighborhood are friendly and polite.
+
+Many of them are students or office workers living in studio apartments.
+
+I often see them walking to the subway station or visiting the park.
+
+Some neighbors like to chat while shopping at the supermarket.
+
+Overall, it’s a quiet and nice community to live in.
+
 
 ## 동네에서의 기억?
 
-usually, My neighborhood is calm.
+One weekend, I went to the park in my neighborhood to relax.
 
-When I jog in the neighborhood in the morning
+The weather was great, and many people were enjoying the day.
 
-It makes me feel better.
+I walked around, read a book, and enjoyed some fresh air.
+
+After that, I stopped by the supermarket to buy some groceries.
+
+It was a simple but enjoyable way to spend my time.
 
