--- a/study/오픽/4. 공원, 자전거.md
+++ b/study/오픽/4. 공원, 자전거.md
@@ -23,15 +23,20 @@ And there are bike paths and exercise equipment in the park.
 
 So when I go to the park, I usually bring a water bottle and a bicycle.
 
-I usually ride my bike every weekend.
+I usually ride my bike or walking every weekend.
 
 
 ## 4. 공원에서 있었던 뜻밖의 경험
 
-I remember the time whe I 
+Recently, I went to a park near my house to relax and enjoy the weather.
 
+The park was clean and peaceful, with lots of trees and open space.
 
-It helped me clear my mind and recharge my energy.
+I took a walk, sat on a bench, and listened to the sounds of nature.
+
+It was a great way to clear my mind and feel refreshed.
+
+I really enjoyed the time there and plan to visit again soon.
 
 # 자전거
 
