--- a/study/오픽/2. 집, 동네 묘사.md
+++ b/study/오픽/2. 집, 동네 묘사.md
@@ -45,7 +45,7 @@ my parents house is a spacious and nice house.
 
 the place was always like clean and tidy.
 
-But in my house, I have to do all the housework by myself.
+But my house, I have to do all the housework by myself.
 
 Even though(또우) the house is small, it's not easy to do housework alone.
 
@@ -71,6 +71,10 @@ But it's too expensive.
 So I just decided not to buy it.
 
 <!-- I live with noise. -->
+
+## 어떻게 했는가 또 나오면
+
+I have nothing more to say because I said it before.
 
 ## 가구 묘사, 가장 좋아하는 가구
 
