--- a/study/오픽/3. 영화, 음악.md
+++ b/study/오픽/3. 영화, 음악.md
@@ -18,11 +18,15 @@
 
 ## 좋아하는 영화 장르와 이유
 
-My favorite movie is comedies movie.
+My favorite movie genre is comedy.
 
-I like them because they are fun and entertaining.
+because it makes me laugh(래프) and feel happy.
 
-The most memorable movie is 극한직업.
+The jokes and silly moments always make me smile.
+
+It's also fun to talk about it with my friends.
+
+When I have free time, I enjoy watching comedy movies.
 
 ## 영화 관람전, 후에 주로 하는 일
 
@@ -57,19 +61,40 @@ he was very fuuny in the movie.
 # 음악
 
 
-## 좋아하는 음악장르와 가수 또는 작곡가
+## 좋아하는 음악장르와 가수
 
-I like korean pop music the best.
+My favorite music genre is K-pop.
 
-my favorite song is fantastic baby by bigbang
+because it’s fun and full of energy.
 
-because It's very exciting.
+One of my favorite groups is 뉴진스.
 
-they are famous for powerful dancing and singing.
+Their songs are catchy, and their performances are amazing.
 
-I'm totally into bigbang.
+Listening to their music always cheers me up.
 
 
 
-## 음악 듣는 방법
+## 음악 듣는 장소, 시간, 기기
 
+I usually listen to music at home or when I go for a walk.
+
+I like listening in the evening because it helps me relax.
+
+I use my phone and earphones to play my favorite songs.
+
+Sometimes I listen to music while playing games.
+
+Music makes any time or place more enjoyable.
+
+## 좋아하는 노래와 관련된 추억
+
+One of my favorite songs is ditto of 뉴진스.
+
+I first heard it during a trip with my friends.
+
+We sang along together, and it made the trip unforgettable(언퍼게터벌).
+
+Whenever I hear the song, it brings back those happy memories.
+
+So this song is special to me.
