--- a/study/오픽/4. 공원, 자전거.md
+++ b/study/오픽/4. 공원, 자전거.md
@@ -1,16 +1,6 @@
 # 공원
 
-- 공원 모습 묘사 \*`빈출`
-- 공원에 있는 사람들 묘사
-
-- 공원에 주로 하는 일 \*`빈출`
-- 공원에 가는 빈도, 하는 일 \*`빈출`
-- 공원에 갈 때 가지고 가는 것
-- 추천하고 싶은 공원
-- 공원에서 있었던 뜻밖의 경험 \*`빈출`
-- 최근에 공원에 간 경험
-
-## 1. 공원 묘사
+##  공원 묘사
 
 
 My favorite park is Han River Park.
@@ -25,8 +15,20 @@ So when I go to the park, I usually bring a water bottle and a bicycle.
 
 I usually ride my bike or walking every weekend.
 
+## 공원에 주로 하는 일, 가는 빈도
 
-## 4. 공원에서 있었던 뜻밖의 경험
+I usually go to the park on weekends.
+
+I like riding my bike or jogging there.
+
+The park is big and has nice paths for exercise.
+
+It’s a great way to stay active and enjoy fresh air.
+
+I always feel refreshed after spending time there.
+
+
+##  공원에서 있었던 뜻밖의 경험
 
 Recently, I went to a park near my house to relax and enjoy the weather.
 
@@ -65,3 +67,14 @@ The experience of riding a bicycle was much better than I thought(떠ㄸ).
 
 So even after graduation, I still enjoy riding my bike in the park.
 
+## 자전거 경험
+
+Last weekend, I rode my bike around the park.
+
+The weather was sunny, and the **breeze** felt great. (브리즈 산들바람)
+
+I enjoyed the view of trees and people relaxing.
+
+It was peaceful, and I like this atmosphere.(앳모스피어)
+
+I want to ride a bike again.
