--- a/study/오픽/5. 해변, 캠핑.md
+++ b/study/오픽/5. 해변, 캠핑.md
@@ -34,7 +34,35 @@ And I pack extra clothes.
 That's all.
 
 
+## 해변 경험
+
+Last summer, I visited a 해운대 beach with my friends.
+
+We swam in the ocean and played games on the sand.
+
+The sound of the waves and the sunset were so relaxing.
+
+We also had a barbecue and seafood.
+
+It was one of the best days I’ve ever had.
+
+
+
+
 # 캠핑
+
+## 좋아하는 캠핑장, 이유
+
+I really like the Gwangju campsite.
+
+It is a famous campsite in Gwangju.
+
+I go there when I need to clear my mind with my family.
+
+There are beautiful valleys and barbecues.
+
+It was peaceful. I like this atmosphere.
+
 
 ## 캠핑중에 하는 일
 
@@ -49,6 +77,8 @@ First, I usually set up a tent with my father.
 Next, I prepare a meal. Like 김치찌개 soup.
 
 in the evening, We all have barbecue together.
+
+
 
 ## 캠핑 여행에서 기억에 남는 경험
 
