--- a/study/오픽/4. 공원, 자전거.md
+++ b/study/오픽/4. 공원, 자전거.md
@@ -13,7 +13,7 @@ And there are bike paths and exercise equipment in the park.
 
 So when I go to the park, I usually bring a water bottle and a bicycle.
 
-I usually ride my bike or walking every weekend.
+I like to ride a bike or walk every weekend.
 
 ## 공원에 주로 하는 일, 가는 빈도
 
