--- a/study/오픽/7. 하이킹, 걷기, 조깅.md
+++ b/study/오픽/7. 하이킹, 걷기, 조깅.md
@@ -1,43 +1,53 @@
-# 하이킹
+# 하이킹, 걷기, 조깅
 
 ## 하이킹/걷기/조깅 하기 위해 가는 장소에 대해 말해보세요(어딘지, 어떻게 가는지, 장점이 뭔지, 하이킹 하는 데 총 시간은 얼마인지)
 
 
-I often visit countryside to go (hiking/walking/jogging). 
+I usually go to a park or a nearby trail for it.
 
-I drive there, and it's little close to my home. 
+These places are quiet and surrounded by nature.
 
-There are some great trails for (hiking/walking/jogging).
+There are paths that are perfect for [walking, jogging, or hiking].
 
-The place I visit is so beautiful. 
+I like going there in the morning or evening when it’s cooler.
 
-The scenery is stunning because of all the trees and plants. 
-
-In spring, all the flowers are blossoming, so lots of people visit there to go hiking. 
-
-You should really come, Ava.
-
+It’s a peaceful way to enjoy some fresh air and exercise.
 
 
 ## 하이킹/ 걷기/ 조깅 준비물
 
-The best thing about (hiking/walking/jogging) is that you don't need any fancy equipment / gears.
+I don’t prepare much for it.
 
-some use trekking poles, but it's not necessary.
+I just wear comfortable shoes and take a water bottle.
+
+Sometimes, I bring a hat if it’s sunny.
+
+That’s all I need to enjoy walking, jogging, or hiking.
+
+I like keeping it simple and easy.
+
 
 
 ## 하이킹/ 걷기/ 조깅 장점
 
-First of all, you can easily lose some weight. 
+It helps me stay healthy and feel good.
 
-When you go (hiking/walking/jogging) on a regular basis,  it'll help you stay fit. 
+I can relax and clear my mind while doing it.
+
+It’s also a great way to enjoy nature and get fresh air.
+
+Sometimes, I go with friends and have fun together.
+
+It’s simple, but it makes a big difference in my life.
 
 ## 계기
 
-I told you before that I was born in Gwangju.
+I started doing it because of my parents.
 
-Gwangju is surrounded by amazing mountains and forests.
+When I was young, they often took me to parks or trails.
 
-when I was young, I have been (hiking/walking/jogging) with my parents there.
+We spent time walking or hiking together as a family.
 
-So I'm very used that.
+It became a habit, and now I enjoy doing it myself.
+
+I can relax and clear my mind while doing it.
